--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <link href="css/grid.css" media="screen, projection" rel="stylesheet" type="text/css">
     <link href="css/text.css" media="screen, projection" rel="stylesheet" type="text/css">
     <link href="css/style.css" media="screen, projection" rel="stylesheet" type="text/css">
+    <link href='http://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic' rel='stylesheet' type='text/css'>
   </head>
-  <body>
+  <body id='home'>
     <div id='header_area'>
       <div class='page'>
         <div id='header'>
@@ -16,7 +17,9 @@
             </a>
           </h1>
           <!-- #logo -->
-          <div id='zen_space'></div>
+          <div id='zen_space'>
+            &nbsp;
+          </div>
           <!-- #zen_space -->
         </div>
         <!-- #header -->
@@ -26,7 +29,27 @@
     <div id='content_area'>
       <div class='page'>
         <div id='content'>
-          This is content
+          <div id='sidebar'>
+            <div class='menu'>
+              <ul>
+                <li class='current_page_item'>
+                  <a href=''>Home</a>
+                </li>
+                <li class='page_item'>
+                  <a href=''>About</a>
+                </li>
+              </ul>
+              <!-- ul -->
+            </div>
+            <!-- .menu -->
+          </div>
+          <div id='content_box'>
+            <div class='page' id='page_id-77'>
+              <p>
+                Lorem ipsum amet sit dolor.
+              </p>
+            </div>
+          </div>
         </div>
         <!-- #content -->
       </div>
@@ -35,7 +58,7 @@
     <div id='footer_area'>
       <div class='page'>
         <div id='footer'>
-          This is footer
+          <p>&copy; 2011. All Rights Reserved</p>
         </div>
         <!-- #footer -->
       </div>
