Style Fine Tune for Front Page

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link href="css/grid.css" media="screen, projection" rel="stylesheet" type="text/css">
     <link href="css/text.css" media="screen, projection" rel="stylesheet" type="text/css">
     <link href="css/style.css" media="screen, projection" rel="stylesheet" type="text/css">
-    <link href='http://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic' rel='stylesheet' type='text/css'>
+    <!-- <link href='http://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic' rel='stylesheet' type='text/css'> -->
   </head>
   <body id='home'>
     <div id='header_area'>
@@ -13,7 +13,7 @@
         <div id='header'>
           <h1 id='logo'>
             <a href=''>
-              Site Name
+              Steve Jobs
             </a>
           </h1>
           <!-- #logo -->
@@ -44,9 +44,13 @@
             <!-- .menu -->
           </div>
           <div id='content_box'>
-            <div class='page' id='page_id-77'>
+            <div class='page_post' id='page_id-77'>
               <p>
-                Lorem ipsum amet sit dolor.
+                Co-Founder Apple Inc.<br>
+                Founder NeXT Computers<br>
+                Buddhist<br>
+                Typography Fanatic<br>
+                Turtle Neck Fashion<br>
               </p>
             </div>
           </div>
